fix news preview in manage news on mobile; fix menu admin on mobile

--- a/resources/assets/css/menuAdmin.css
+++ b/resources/assets/css/menuAdmin.css
@@ -7,3 +7,8 @@
 #mobile_menu {
 	background-color:#353535;
 }
+
+
+#mobile_menu .sub.item {
+	margin-left: 50px;
+}
